<resources>
    <string name="app_name">Conceitos MOR</string>
    <string name="btn_consulta_alunos">Consulta Alunos</string>
    <string name="btn_consulta_provas">Consulta Provas</string>
    <string name="btn_alunos_e_provas">Alunos e Provas</string>
    <string name="btn_consultar_perguntas">Consulta Perguntas</string>
    <string name="btn_consulta_respostas">Consulta Respostas</string>
    <string name="edt_aluno">Informe o nome</string>
    <string name="edt_celular">Informe o número do celular</string>
    <string name="edt_email">Informe o email</string>
    <string name="edt_usuario_github">Informe o usuário GitHub</string>
</resources>